--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,6 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>TodoServlet</servlet-name>
-        <url-pattern>/todo</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 </web-app>
