--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app>
     <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
+        <welcome-file>/</welcome-file>
     </welcome-file-list>
     <servlet>
         <servlet-name>TodoServlet</servlet-name>
-        <servlet-class>com.coderdojowarehouse.todo.TodoServlet</servlet-class>
+        <servlet-class>com.coderdojowarehouse.todo.webapp.TodoServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>TodoServlet</servlet-name>
         <url-pattern>/</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>/assets/*</url-pattern>
     </servlet-mapping>
 </web-app>
